[gd_scene load_steps=16 format=3 uid="uid://dbi0epoa6yfor"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_xxqp4"]
[ext_resource type="Script" path="res://src/player/states/playerstatemachineholder.gd" id="2_ed77f"]
[ext_resource type="Script" path="res://src/player/platformerresource.gd" id="2_oamd2"]
[ext_resource type="Script" path="res://src/player/states/playerstatemachine.gd" id="3_xkvhd"]
[ext_resource type="Script" path="res://src/player/states/player_idle.gd" id="4_0tjwk"]
[ext_resource type="Script" path="res://src/player/states/player_fall.gd" id="6_hfu8q"]
[ext_resource type="Script" path="res://src/player/states/player_run.gd" id="7_rq3b3"]
[ext_resource type="Script" path="res://src/player/states/player_jump.gd" id="8_oupxc"]
[ext_resource type="Script" path="res://src/player/states/player_ajump.gd" id="9_ynrpd"]
[ext_resource type="Script" path="res://src/player/states/player_gdash.gd" id="10_pxl7d"]
[ext_resource type="Script" path="res://src/player/states/player_adash.gd" id="11_2wucf"]

[sub_resource type="Resource" id="Resource_583a7"]
script = ExtResource("2_oamd2")
coyote_time = 0.1
jump_buffer_time = 0.1
air_jump_multiplier = 0.8
dash_jump_multiplier = 1.2
dash_time = 0.2
dash_jump_buffer_time = 0.2
dash_cooldown_time = 0.2
dash_length = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03lp6"]
size = Vector2(48, 102)

[sub_resource type="CircleShape2D" id="CircleShape2D_pekkh"]
radius = 22.561

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j56s1"]
size = Vector2(83, 133)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("initial_movement_state")]
script = ExtResource("1_xxqp4")
initial_movement_state = NodePath("StateMachineHolder/PlayerStateMachine/PlayerIdle")
platformer_settings = SubResource("Resource_583a7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -51)
shape = SubResource("RectangleShape2D_03lp6")
debug_color = Color(0, 0.647059, 0.231373, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_pekkh")
debug_color = Color(0.917647, 0.0666667, 0.00784314, 0.419608)

[node name="Dodgebox" type="Area2D" parent="."]
position = Vector2(0, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dodgebox"]
position = Vector2(-0.5, 4.5)
shape = SubResource("RectangleShape2D_j56s1")
debug_color = Color(0.360784, 0.882353, 1, 0.419608)

[node name="StateMachineHolder" type="Node" parent="."]
script = ExtResource("2_ed77f")

[node name="PlayerStateMachine" type="Node" parent="StateMachineHolder" node_paths=PackedStringArray("pawn", "initial_state")]
script = ExtResource("3_xkvhd")
pawn = NodePath("../..")
initial_state = NodePath("PlayerIdle")

[node name="PlayerIdle" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("run", "jump", "fall", "gdash")]
script = ExtResource("4_0tjwk")
run = NodePath("../PlayerRun")
jump = NodePath("../PlayerJump")
fall = NodePath("../PlayerFall")
gdash = NodePath("../PlayerGDash")

[node name="PlayerFall" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("idle", "run", "jump", "adash", "ajump")]
script = ExtResource("6_hfu8q")
idle = NodePath("../PlayerIdle")
run = NodePath("../PlayerRun")
jump = NodePath("../PlayerJump")
adash = NodePath("../PlayerADash")
ajump = NodePath("../PlayerAJump")

[node name="PlayerRun" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("idle", "jump", "fall", "gdash")]
script = ExtResource("7_rq3b3")
idle = NodePath("../PlayerIdle")
jump = NodePath("../PlayerJump")
fall = NodePath("../PlayerFall")
gdash = NodePath("../PlayerGDash")

[node name="PlayerJump" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("fall", "adash")]
script = ExtResource("8_oupxc")
fall = NodePath("../PlayerFall")
adash = NodePath("../PlayerAJump")

[node name="PlayerAJump" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("fall", "adash")]
script = ExtResource("9_ynrpd")
fall = NodePath("../PlayerFall")
adash = NodePath("../PlayerADash")

[node name="PlayerGDash" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("idle", "run", "fall", "jump")]
script = ExtResource("10_pxl7d")
idle = NodePath("../PlayerIdle")
run = NodePath("../PlayerRun")
fall = NodePath("../PlayerFall")
jump = NodePath("../PlayerJump")

[node name="PlayerADash" type="Node" parent="StateMachineHolder/PlayerStateMachine" node_paths=PackedStringArray("idle", "run", "fall", "ajump")]
script = ExtResource("11_2wucf")
idle = NodePath("../PlayerIdle")
run = NodePath("../PlayerRun")
fall = NodePath("../PlayerFall")
ajump = NodePath("../PlayerAJump")

[node name="Timers" type="Node" parent="."]

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="DashJumpBufferTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
process_callback = 0
one_shot = true
